# gruel

./: .gitignore  CHANGELOG.md  README.md  gruel.gaphor  pyproject.toml
docs/: gruel.html  index.html  search.js
docs/gruel/: brewer.html  gruel.html  grueler.html  subgruel.html  template.html
src/gruel/: __init__.py  brewer.py  core.py  crawler.py  gruel.py  grueler.py  models.py  request.py  requests.py  soupstrainer.py  subgruel.py  template.py
tests/: ridewithgps.html  test_brewer.py  test_gruel.py  test_gruelfinder.py  test_models.py  test_request.py  test_soupstrainer.py
tests/dummy/: dummy.py  dummy2.py
