[project]
name = "gruel"
description = "Another scraping framework"
version = "4.2.2"
dependencies = ["pathier", "printbuddies", "younotyou", "noiftimer", "requests", "whosyouragent", "quickpool", "loggi", "beautifulsoup4", "rich", "scrapetools", "typing_extensions", "urllib3", "seleniumuser"]
readme = "README.md"
keywords = ["scrape", "scraping", "webscraping", "webscraper", "beautifulsoup", "framework"]
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent"]
requires-python = ">=3.10, <=3.12"

[[project.authors]]
name = "Matt Manes"
email = "mattmanes@pm.me"

[project.urls]
Homepage = "https://github.com/matt-manes/gruel"
Documentation = "https://github.com/matt-manes/gruel/tree/main/docs"
"Source code" = "https://github.com/matt-manes/gruel/tree/main/src/gruel"

[project.scripts]
subgruel = "gruel.subgruel:main"
brew_gruel = "gruel.brewer:main"

[tool]
[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = "src"

[tool.hatch.build.targets.sdist]
exclude = [".coverage", ".pytest_cache", ".vscode", "tests", "htmlcov", "docs", "*log*", "*.md", "*.gaphor"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
